--- a/simple_jwt_api.yml
+++ b/simple_jwt_api.yml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: simple-jwt-api
+  name: simple-jwt-app
 spec:
   type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: simple-jwt-api
+    app: simple-jwt-app
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: simple-jwt-api
+  name: simple-jwt-app
 spec:
   replicas: 3
   strategy:
@@ -23,14 +23,14 @@ spec:
       maxSurge: 2
   selector:
     matchLabels:
-      app: simple-jwt-api
+      app: simple-jwt-app
   template:
     metadata:
       labels:
-        app: simple-jwt-api
+        app: simple-jwt-app
     spec:
       containers:
-        - name: simple-jwt-api
+        - name: simple-jwt-app
           image: CONTAINER_IMAGE
           securityContext:
             privileged: false
